fix: slightly increase restart btn row size to prevent layout shift

--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@
 
 .game-area {
     display: grid;
-    grid-template-rows: 2fr 1fr 0.25fr;
+    grid-template-rows: 2fr 1fr 0.30fr;
     justify-items: center;
 }
 
